# Okada_hackathon_voice_conversational_agent

./: .gitignore  README.md  architecture.md  hackathon_project_description.md
backend/: .env.example  .gitignore  pyproject.toml  report.md
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/api/v1/endpoints/: appointment.py  audio.py  chat.py  converse.py  health.py  history.py  live_chat.py  management.py  upload.py  user_management.py
backend/app/core/: agents.py  async_redis_chat_message_history.py  config.py  logging_config.py  session.py  session_manager.py
backend/app/models/: crm_models.py
backend/app/services/: appointment_workflow.py  calendar_service.py  crm_service.py  database_service.py  document_parser.py  error_handler_service.py  fast_message_classifier.py  google_meet_service.py  persistent_history_service.py  property_service.py  recommendation_workflow.py  strict_response_generator.py  vector_store.py
backend/app/tests/: convert_audio.py  test_audio.py  test_chat.py  test_live_chat.py  test_management.py  test_upload.py
backend/app/tools/: csv_tool.py  web_search.py
backend/chroma_db/85773b42-0815-4970-8375-7afa91e2347f/: index_metadata.pickle
backend/chroma_db/d8928aa1-055a-49f0-82d2-a52753b43cbd/: index_metadata.pickle
backend/scripts/: seed_properties_from_csv.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/worklets/: audio-processor.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  crmApi.ts
(+14 files in other folders)
